--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -33,4 +33,5 @@ jobs:
             sleep $sleep_time
           done
 
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+
