--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -16,78 +16,36 @@ jobs:
       - name: Clonar el repositorio
         uses: actions/checkout@v4
 
-      - name: Generar commits aleatorios con patrón realista
+      - name: Generar commits aleatorios
         run: |
           git config user.name "BeruzDev"
           git config user.email "albertus1291@gmail.com"
         
-          # Obtener día de la semana (1=Lunes, 7=Domingo)
-          day_of_week=$(date +%u)
-          
-          # Generar número aleatorio para determinar si es día productivo
-          productive_day=$((RANDOM % 7))
-          
-          # Determinar cantidad de commits según el día
-          if [ "$day_of_week" -eq 6 ] || [ "$day_of_week" -eq 7 ]; then
-            # Fin de semana: 1-3 commits
-            count=$(( (RANDOM % 3) + 1 ))
-            echo "🏖️ Fin de semana: $count commits programados"
-          elif [ "$productive_day" -lt 2 ]; then
-            # 2 días aleatorios por semana: día productivo (5-10 commits)
-            count=$(( (RANDOM % 6) + 5 ))
-            echo "🔥 Día productivo: $count commits programados"
-          else
-            # Días normales entre semana: 1-6 commits
-            count=$(( (RANDOM % 6) + 1 ))
-            echo "📝 Día normal: $count commits programados"
-          fi
-        
           start_time=$(date +%s)
           max_duration=16200  
         
+          count=$(( (RANDOM % 6) + 5 )) 
+          echo "Hoy se harán $count commits"
+        
           for i in $(seq 1 $count)
           do
-            # Mensajes más variados y realistas
-            messages=(
-              "feat: mejoras en el código"
-              "fix: corrección de errores"
-              "docs: actualización de documentación"
-              "refactor: optimización de código"
-              "style: ajustes de formato"
-              "test: añadir pruebas"
-              "chore: tareas de mantenimiento"
-              "update: actualización de dependencias"
-              "improve: mejoras generales"
-              "add: nueva funcionalidad"
-            )
-            
-            random_message=${messages[$((RANDOM % ${#messages[@]}))]}
-            
-            echo "Commit $i del día: $(date) - $random_message" >> activity.txt
+            echo "Commit $i del día: $(date)" >> activity.txt
             git add activity.txt
-            git commit -m "$random_message [skip ci]"
+            git commit -m "commit automático $i del día [skip ci]"
             git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
         
             if [ "$i" -lt "$count" ]; then
               current_time=$(date +%s)
               elapsed=$((current_time - start_time))
               if [ "$elapsed" -ge "$max_duration" ]; then
-                echo "⏹️ Tiempo máximo alcanzado (${elapsed}s). Terminando."
+                echo "⏹️ Tiempo máximo alcanzado (${elapsed}s). Terminando antes del siguiente commit."
                 break
               fi
         
-              # Tiempos de espera más variados según el tipo de día
-              if [ "$productive_day" -lt 2 ]; then
-                # Día productivo: commits más frecuentes (30min - 2h)
-                sleep_time=$(( (RANDOM % 5400) + 1800 ))
-              else
-                # Día normal: commits más espaciados (1h - 4h)
-                sleep_time=$(( (RANDOM % 10800) + 3600 ))
-              fi
-              
+              sleep_time=$(( (RANDOM % 1500) + 900 )) 
               hours=$(( sleep_time / 3600 ))
               minutes=$(( (sleep_time % 3600) / 60 ))
-              echo "⏱️ Esperando ${hours}h ${minutes}min antes del siguiente commit..."
+              echo "⏱️ Esperando aproximadamente ${hours}h ${minutes}min antes del siguiente commit..."
               sleep $sleep_time
             fi
           done
